--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
     "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-svg": "^12.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-web": "~0.11.7",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "victory-native": "^34.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
